--- a/templates/components/custom/global/global-banner.html
+++ b/templates/components/custom/global/global-banner.html
@@ -1,20 +1,35 @@
-<section class="globalBanner" style="--bannerHeight: {{#get '1' (split desktopSize 'x')}}{{this}}{{/get}};--bannerWidth: {{#get '0' (split desktopSize 'x')}}{{this}}{{/get}}; --minHeightDT: {{#get '1' (split desktopSize 'x')}}{{this}}{{/get}}px; --minHeightMB: {{#get '1' (split mobileSize 'x')}}{{this}}{{/get}}px">
+<section class="globalBanner{{#if csmClass}} {{csmClass}}{{/if}}" style="--bannerHeight: {{#get '1' (split desktopSize 'x')}}{{this}}{{/get}};--bannerWidth: {{#get '0' (split desktopSize 'x')}}{{this}}{{/get}}; --minHeightDT: {{#get '1' (split desktopSize 'x')}}{{this}}{{/get}}px; --minHeightMB: {{#get '1' (split mobileSize 'x')}}{{this}}{{/get}}px">
     <div class="globalBanner__img">
         {{#if isLazyload}}
-            <img class="lazyload" src="{{cdn 'img/loading.svg'}}" data-src="/product_images/uploaded_images/{{image}}" alt="{{title}} Banner">
+            <img class="lazyload" src="" data-src="/product_images/uploaded_images/{{image}}" alt="{{title}} Banner">
         {{else}}
             <img src="/product_images/uploaded_images/{{image}}" alt="{{title}} Banner">
         {{/if}}
 
-        <div class="image-overlay" style="--overlay-opacity: 0.45;"></div>
+        <div class="image-overlay" style="--overlay-opacity: {{#if opacity}}{{opacity}}{{else}}0.45{{/if}};"></div>
     </div>
 
     <div class="globalBanner__content">
+        {{#if title}}
         <h2 class="globalBanner__title text-white text-center heading-size-11 aos-animate" data-aos="hero" data-aos-order="2">
             {{title}}
         </h2>
+        {{/if}}
+        {{#if desc}}
         <p class="globalBanner__desc text-white text-center body-size-5 font-body aos-animate" data-aos="hero" data-aos-order="3">
             {{desc}}
         </p>
+        {{/if}}
+
+        {{#if button}}
+        <div class="globalBanner__action flex flex-center aos-animate" data-aos="hero" data-aos-order="2">
+            <a href="{{link}}" class="globalBanner__button button button--icon">
+                {{button}}
+                <span class="icon icon--arrow-right">
+                    <svg><use xlink:href="#icon-arrow-right"></use></svg>
+                </span>
+            </a>
+        </div>
+        {{/if}}
     </div>
 </section>
