Done Contact Us Page Layout

--- a/templates/components/page/contact-us-form-locator.html
+++ b/templates/components/page/contact-us-form-locator.html
@@ -5,7 +5,7 @@
         <p style="text-align: center;">If you offer a range of Tish Lyon jewellery in your studio or store, contact our team to be featured on our stockist map. simply provide us with:&nbsp;<span>Store name, business address, website and contact information.</span></p>
     </div>
 </div>
-<div class="form-locator-wrapper">
+<div class="form-contact-wrapper">
     <form data-contact-form class="form form-locator custom-form" action="{{urls.contact_us_submit}}" method="post">
         {{inject 'contactEmail' (lang 'forms.validate.contact.email_address')}}
         {{inject 'contactQuestion' (lang 'forms.validate.contact.question')}}
