--- a/assets/scss/custom/_pages.scss
+++ b/assets/scss/custom/_pages.scss
@@ -81,3 +81,261 @@
         margin-bottom: 0;
     }
 }
+
+// * ------ Store Locator Page ------
+.storeLocator {
+    margin-bottom: 24px;
+
+    .page-heading {
+        text-align: left;
+    }
+
+    &__wrapper {
+        display: flex;
+        gap: 32px;
+        height: 600px;
+
+        @include smax-s {
+            flex-direction: column-reverse;
+            height: auto;
+        }; 
+    }
+
+    &__left {
+        width: 350px;
+
+        @include smax-s {
+            width: 100%;
+        }; 
+    }
+
+    &__address {
+        max-height: 600px;
+
+        .address__item {
+            padding: 15px 0;
+            border-top: 1px dotted rgba(0,0,0,.2);
+            display: flex;
+            flex-direction: column;
+
+            > * {
+                width: fit-content;
+                font-size: 14px;
+
+                @include smax-s {
+                    font-size: 12px;
+                }; 
+            }
+
+            &:last-child {
+                border-bottom: 1px dotted rgba(0,0,0,.2);
+            }
+
+            .title {
+                font-size: 16px;
+                font-weight: 700;
+                line-height: 20px;
+                letter-spacing: 0;
+                color: $color-custom-yellow;
+                font-family: $body-font-family;
+                margin: 0;
+                margin-bottom: 8px;
+            }
+
+            .hover-link-2 {
+                padding: 0;
+            }
+        }
+    }
+
+    &__right {
+        width: calc(100% - 350px);
+        flex: 1;
+
+        @include smax-s {
+            width: 100%;
+        }; 
+    }
+
+    &__map {
+        position: relative;
+        overflow: hidden;
+
+        @include smax-s {
+            height: 300px;
+
+            iframe {
+                height: 300px;
+            }
+        }; 
+
+        &::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: block;
+            background: linear-gradient(to bottom, #fafafa 8%, #f8f8f8 60%);
+            transform: translateY(-100%);
+            z-index: 2;
+        }
+
+        &.map-loading {
+            &::after {
+                animation: overlaySlide 1.2s ease forwards;
+            }
+        }
+    }
+
+    + .page-content {
+        .form-locator-header {
+            padding: 50px 0;
+
+            @include smax-m {
+                padding: 30px 0;
+            };
+
+            @include smax-s {
+                padding: 16px 0;
+            };
+
+            .hero__rte {
+                p {
+                    margin-bottom: 0;
+                }
+            }
+            
+        }
+    }
+}
+
+.form-contact-wrapper {
+    max-width: 670px;
+    margin: 0 auto;
+    padding-left: 50px;
+    padding-right: 50px;
+    margin-bottom: 50px;
+
+    @include smax-m {
+        padding-left: 30px;
+        padding-right: 30px;
+        margin-bottom: 30px;
+    }; 
+
+    @include smax-s {
+        padding-left: 16px;
+        padding-right: 16px;
+        margin-bottom: 16px;
+    };
+
+    .form-row {
+        margin: 0;
+    }
+
+    .custom-form__block {
+        margin: 0;
+        margin-bottom: 20px;
+        border: none;
+        padding: 0;
+        font-weight: 300;
+
+        .strong  {
+            font-weight: 400;
+        }
+        
+        .form-actions {
+            margin-top: 0;
+        }
+        
+        .button {
+            width: 100%;
+            font-size: 13px;
+            line-height: 18px;
+            letter-spacing: 1.3px;
+            padding: 10px 18px;
+            border-radius: 300px;
+        }
+    }
+
+    .form__legal {
+        p {
+            font-size: 12px;
+            font-style: italic;
+            line-height: 12px;
+            margin: 6px 0;
+            color: rgba(33, 33, 33, 0.7);
+
+            a {
+                color: inherit;
+                text-decoration: none;
+            }
+        }
+    }
+
+    .checkbox {
+        position: relative;
+        margin-bottom: 20px;
+
+        input[type=checkbox] {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 0;
+            height: 0;
+            padding: 0;
+            margin: 0;
+            opacity: 0;
+            appearance: checkbox;
+
+            + label {
+                display: flex;
+                align-items: center;
+                cursor: pointer;
+
+                &::before {
+                    content: "";
+                    align-self: flex-start;
+                    flex: 0 0 auto;
+                    display: inline-block;
+                    width: 1.2em;
+                    height: 1.2em;
+                    border: 1px solid #646464;
+                    margin-right: 10px;
+                    background: #ffffff;
+                }
+            }
+
+            &:checked {
+                + label:before {
+                    background: $color-custom-yellow;
+                    box-shadow: inset 0 0 0 2px #ffffff;
+                }
+            }
+        }
+    }
+}
+
+.contactUsTop {
+    background-color: #f7f7f7;
+    padding: 50px 0;
+    margin-bottom: 50px;
+
+    @include smax-m {
+        padding: 40px 0;
+        margin-bottom: 40px;
+    }; 
+
+    @include smax-s {
+        padding: 30px 0;
+        margin-bottom: 30px;
+    };
+}
+
+#contact-us-page {
+    float: unset;
+    p {
+        margin: 0;
+    }
+}
