--- a/templates/pages/contact-us.html
+++ b/templates/pages/contact-us.html
@@ -1,42 +1,48 @@
 {{#partial "page"}}
 
-{{#unless (toLowerCase page.title) '==' 'store locator'}}
-    {{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
-{{/unless}}
+{{#if (toLowerCase page.title) '==' 'contact us'}}
+<div class="contactUsTop">
+    <div class="contactUsTop__wrapper wrapper">
+        <div class="contactUsTop__content">
+            <h2 class="contactUsTop__title heading-size-8 aos-animate text-center mt-0 mb-16 mb-10-mobile" data-aos="hero" data-aos-order="2">
+                Get in Touch
+            </h2>
+        </div>
+    </div>
+</div>
+{{/if}}
 
-<main class="page">
-    {{#unless (toLowerCase page.title) '==' 'store locator'}}
-        {{#unless theme_settings.hide_contact_us_page_heading }}
-            <h1 class="page-heading">{{page.title}}</h1>
+<main class="page page-contact-us">
+    <div class="container">
+        {{#unless (toLowerCase page.title) '==' 'store locator'}}
+            {{#unless theme_settings.hide_contact_us_page_heading }}
+                <h1 class="page-heading">{{page.title}}</h1>
+            {{/unless}}
         {{/unless}}
-    {{/unless}}
- 
-    {{#if (toLowerCase page.title) '==' 'store locator'}}
-       {{> components/custom/page/store-locator-map }}
-    {{/if}}
-
-    {{#if page.sub_pages}}
-        <nav class="navBar navBar--sub">
-            <ul class="navBar-section account-navigation">
-                {{#each page.sub_pages}}
-                    <li class="navBar-item"><a class="navBar-action" href="{{url}}">{{title}}</a></li>
-                {{/each}}
-            </ul>
-        </nav>
-    {{/if}}
-
-    <div id="contact-us-page" class="page-content page-content--centered">
-        {{#if forms.contact.success}}
-            <div id="contact-us-success">{{{lang 'forms.contact_us.successful' shopPath=urls.home}}}</div>
-        {{else}}
-            <p>{{{page.content}}}</p>
-            {{#if (toLowerCase page.title) '==' 'store locator'}}
-                {{> components/page/contact-us-form-locator}}
-            {{else}}
-                {{> components/page/contact-us-form}}
-            {{/if}}
+        {{#if (toLowerCase page.title) '==' 'store locator'}}
+            {{> components/custom/page/store-locator-map }}
         {{/if}}
-
+        {{#if page.sub_pages}}
+            <nav class="navBar navBar--sub">
+                <ul class="navBar-section account-navigation">
+                    {{#each page.sub_pages}}
+                        <li class="navBar-item"><a class="navBar-action" href="{{url}}">{{title}}</a></li>
+                    {{/each}}
+                </ul>
+            </nav>
+        {{/if}}
+        <div id="contact-us-page" class="page-content page-content--centered">
+            {{#if forms.contact.success}}
+                <div id="contact-us-success">{{{lang 'forms.contact_us.successful' shopPath=urls.home}}}</div>
+            {{else}}
+                <p>{{{page.content}}}</p>
+                {{#if (toLowerCase page.title) '==' 'store locator'}}
+                    {{> components/page/contact-us-form-locator}}
+                {{else}}
+                    {{> components/page/contact-us-form}}
+                {{/if}}
+            {{/if}}
+        </div>
     </div>
 
 </main>
