--- a/templates/components/custom/global/global-banner.html
+++ b/templates/components/custom/global/global-banner.html
@@ -31,5 +31,13 @@
             </a>
         </div>
         {{/if}}
+
+        {{#if button2}}
+        <div class="globalBanner__action flex flex-center aos-animate" data-aos="hero" data-aos-order="2">
+            <a href="{{link}}" class="globalBanner__button button button--primary">
+                {{button2}}
+            </a>
+        </div>
+        {{/if}}
     </div>
 </section>
