--- a/templates/components/page/contact-us-form-return.html
+++ b/templates/components/page/contact-us-form-return.html
@@ -50,21 +50,13 @@
         <div class="custom-form__block custom-form__block--heading">
             <p class="strong">Optional:</p>
         </div>
-        <div class="custom-form__block checkbox">
-            <input type="checkbox" id="contactFormUrgent" class="contactFormCheckbox" name="contact[this-is-urgent]" value="This is urgent">
-            <label for="contactFormUrgent">
-                This is urgent
-            </label>
-        </div>
         <fieldset class="custom-form__block custom-form__block--group">
-            <label class="custom-form__label label--block">What type of business do you have?</label>
-            <select class="contactFormSelect field" name="contact[what-type-of-business-do-you-have]">
-                <option value="- Pick an option -">- Pick an option -</option>
-                <option value="Option one">Option one</option>
-                <option value="Option two">Option two</option>
-                <option value="Option three">Option three</option>
-                <option value="Option four">Option four</option>
-                <option value="Option five">Option five</option>
+            <label class="custom-form__label label--block">Select an option</label>
+            <select class="contactFormSelect field" name="contact[i-would-like-to-choose]">
+                <option value="I would like to choose">I would like to choose</option>
+                <option value="Replacement">Replacement</option>
+                <option value="Store Credit">Store Credit</option>
+                <option value="Refund">Refund</option>
             </select>
         </fieldset>
 
