--- a/assets/scss/layouts/body/_body.scss
+++ b/assets/scss/layouts/body/_body.scss
@@ -7,7 +7,7 @@
 //
 // =============================================================================
 body {
-    &:not(.page-type-default):not(.page-type-product):not(.page-type-cart):not(.page-type-blog):not(.page-type-blog_post):not(.page-title--about-us):not(.page-title--contact-us) {
+    &:not(.page-type-default):not(.page-type-product):not(.page-type-cart):not(.page-type-blog):not(.page-type-blog_post):not(.page-title--about-us):not(.page-title--contact-us):not(.page-title--brand-hub) {
         .page-heading {
             font-size: 44px;
             line-height: 53px;
@@ -26,6 +26,12 @@ body {
             @include smax-s {
                 padding: 30px 0;
             };
+        }
+    }
+
+    &.returnPage {
+        .body {
+            padding: 0 !important;
         }
     }
 
