--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -52,7 +52,7 @@
         {{~inject 'token' settings.storefront_api.token}}
         {{~inject 'money' settings.money}}
     </head>
-    <body class="page-type-{{page_type}} aos-initialized{{#if (toLowerCase page.title) '==' 'store locator'}} storeLocator{{/if}} page-title--{{hyphenate (lowercase page.title)}}">
+    <body class="page-type-{{page_type}} aos-initialized{{#if (toLowerCase page.title) '==' 'store locator'}} storeLocator{{/if}} page-title--{{hyphenate (lowercase page.title)}}{{#if (hyphenate (lowercase page.title)) '==' 'returns-&-refunds'}} returnPage{{/if}}">
         <svg data-src="{{cdn 'img/icon-sprite.svg'}}" class="icons-svg-sprite"></svg>
 
         {{> components/common/header }}
