--- a/templates/pages/contact-us.html
+++ b/templates/pages/contact-us.html
@@ -12,6 +12,31 @@
 </div>
 {{/if}}
 
+{{{region name="csm_page_contact_1"}}}
+{{{region name="csm_page_contact_2"}}}
+{{{region name="csm_page_contact_3"}}}
+
+
+{{#if (toLowerCase page.title) '==' 'returns & refunds'}}
+<div class="wrapper">
+    {{{region name="csm_page_contact_4"}}}
+
+    <div class="returnStep__form">
+        <h2 class="text-center">Get in Touch</h2>
+        {{> components/page/contact-us-form-return}}
+    </div>
+
+    {{{region name="csm_page_contact_5"}}}
+    {{{region name="csm_page_contact_6"}}}
+    {{{region name="csm_page_contact_7"}}}
+    {{{region name="csm_page_contact_8"}}}
+    {{{region name="csm_page_contact_9"}}}
+</div>
+{{/if}}
+
+{{{region name="csm_page_contact_10"}}}
+
+
 <main class="page page-contact-us">
     <div class="container">
         {{#unless (toLowerCase page.title) '==' 'store locator'}}
@@ -31,6 +56,7 @@
                 </ul>
             </nav>
         {{/if}}
+        
         <div id="contact-us-page" class="page-content page-content--centered">
             {{#if forms.contact.success}}
                 <div id="contact-us-success">{{{lang 'forms.contact_us.successful' shopPath=urls.home}}}</div>
@@ -39,7 +65,9 @@
                 {{#if (toLowerCase page.title) '==' 'store locator'}}
                     {{> components/page/contact-us-form-locator}}
                 {{else}}
-                    {{> components/page/contact-us-form}}
+                    {{#unless (toLowerCase page.title) '==' 'returns & refunds'}}
+                        {{> components/page/contact-us-form}}
+                    {{/unless}}
                 {{/if}}
             {{/if}}
         </div>
