--- a/templates/components/common/cart-preview.html
+++ b/templates/components/common/cart-preview.html
@@ -124,6 +124,17 @@
                 {{/each}}
         </ul>
         <div class="previewCart__bottom">
+            {{#if cart.shipping_handling.show_estimator}}
+                <div class="cart-total cartTotal__item">
+                    <div class="cart-total-label cartTotal__title toggle__title">
+                        <strong>{{lang 'cart.checkout.shipping'}}:</strong>
+                    </div>
+
+                    <div class="cartTotal__content toggle__content">
+                        {{> components/cart/shipping-estimator cart.shipping_handling}}
+                    </div>
+                </div>
+            {{/if}}
             <ul class="previewCartTotalsPrice">
                 <li class="previewCartTotals subTotal">
                     <div class="previewCartTotals-label">
