--- a/templates/pages/category.html
+++ b/templates/pages/category.html
@@ -42,7 +42,7 @@ category:
 </div>
 
 <div class="productListingPage__wrapper">
-{{> components/custom/page/product-listing-nav }}
+{{> components/custom/page/product-listing-nav isCategory=true}}
     
     <div class="productListingPage__main">
         {{#if category.faceted_search_enabled}}
