--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -16,7 +16,8 @@ product_results:
 
 {{#partial "page"}}
 {{{ stylesheet '/assets/scss/vendor/jstree/style.css' }}}
-{{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
+<div class="container">
+    {{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
 <section class="nav">
     {{#if forms.search.query}}
         <div id="search-results-heading">
@@ -57,87 +58,93 @@ product_results:
     {{/unless}}
 </section>
 
-<section class="page">
-    {{#if product_results.faceted_search_enabled}}
-        <aside class="page-sidebar{{#if forms.search.section '!=' 'product'}} u-hiddenVisually{{/if}}" id="faceted-search-container">
-            {{> components/faceted-search/index product_results}}
-        </aside>
-    {{/if}}
-    <main class="page-content">
-        {{#if forms.search.has_suggestions}}
-            <div class="panel panel--large">
-                <div class="panel-body">
-                    {{#if forms.search.suggested_query}}
-                        <div class="search-suggestion">
-                            {{lang 'forms.search.did_you_mean'}} <strong>{{forms.search.suggested_query.query}}</strong>
-                            <a href="{{forms.search.suggested_query.url}}" class="search-refine">{{lang 'forms.search.refine'}}</a>
-                        </div>
-
-                        {{#if result_count '===' 0}}
-                            <div class="search-suggestion">
-                                <p>
-                                    {{lang 'forms.search.your_search_for'}}
-                                    "<strong>{{{sanitize forms.search.query}}}</strong>"
-                                    {{lang 'forms.search.no_match'}}
-                                </p>
-                            </div>
-                        {{/if}}
-                    {{/if}}
-
-                    {{#if category_results.length}}
-                        <div class="search-suggestion">
-                            <h5 class="suggestion-title">{{lang 'forms.search.categories'}}</h5>
-                            <ul class="category-suggestion-list">
-
-                                {{#each category_results}}
-                                <li class="category-suggestion">
-
-                                    {{#each this}}
-                                        <a href="{{url}}">{{name}}</a>
-                                        {{#unless @last}} > {{/unless}}
-                                    {{/each}}
-
-                                </li>
-                                {{/each}}
-                            </ul>
-                        </div>
-                    {{/if}}
-
-                    {{#if brand_results.length}}
-                        <div class="search-suggestion">
-                            <h5 class="suggestion-title">{{lang 'forms.search.brand'}}</h5>
-                            {{#each brand_results}}
-                                <a href="{{url}}">{{name}}</a>
-                                {{#unless @last}}, {{/unless}}
-                            {{/each}}
-                        </div>
-                    {{/if}}
-
-                    {{#if result_count '===' 0}}
-                        <div class="search-suggestion">
-                            <h5 class="suggestion-title">{{lang 'forms.search.suggestions.title'}}</h5>
-                            <ul>
-                                <li>{{lang 'forms.search.suggestions.line1'}}</li>
-                                <li>{{lang 'forms.search.suggestions.line2'}}</li>
-                                <li>{{lang 'forms.search.suggestions.line3'}}</li>
-                            </ul>
-                        </div>
-                    {{/if}}
+{{#if forms.search.has_suggestions}}
+    <div class="panel panel--large">
+        <div class="panel-body">
+            {{#if forms.search.suggested_query}}
+                <div class="search-suggestion">
+                    {{lang 'forms.search.did_you_mean'}} <strong>{{forms.search.suggested_query.query}}</strong>
+                    <a href="{{forms.search.suggested_query.url}}" class="search-refine">{{lang 'forms.search.refine'}}</a>
                 </div>
-            </div>
+
+                {{#if result_count '===' 0}}
+                    <div class="search-suggestion">
+                        <p>
+                            {{lang 'forms.search.your_search_for'}}
+                            "<strong>{{{sanitize forms.search.query}}}</strong>"
+                            {{lang 'forms.search.no_match'}}
+                        </p>
+                    </div>
+                {{/if}}
+            {{/if}}
+
+            {{#if category_results.length}}
+                <div class="search-suggestion">
+                    <h5 class="suggestion-title">{{lang 'forms.search.categories'}}</h5>
+                    <ul class="category-suggestion-list">
+
+                        {{#each category_results}}
+                        <li class="category-suggestion">
+
+                            {{#each this}}
+                                <a href="{{url}}">{{name}}</a>
+                                {{#unless @last}} > {{/unless}}
+                            {{/each}}
+
+                        </li>
+                        {{/each}}
+                    </ul>
+                </div>
+            {{/if}}
+
+            {{#if brand_results.length}}
+                <div class="search-suggestion">
+                    <h5 class="suggestion-title">{{lang 'forms.search.brand'}}</h5>
+                    {{#each brand_results}}
+                        <a href="{{url}}">{{name}}</a>
+                        {{#unless @last}}, {{/unless}}
+                    {{/each}}
+                </div>
+            {{/if}}
+
+            {{#if result_count '===' 0}}
+                <div class="search-suggestion">
+                    <h5 class="suggestion-title">{{lang 'forms.search.suggestions.title'}}</h5>
+                    <ul>
+                        <li>{{lang 'forms.search.suggestions.line1'}}</li>
+                        <li>{{lang 'forms.search.suggestions.line2'}}</li>
+                        <li>{{lang 'forms.search.suggestions.line3'}}</li>
+                    </ul>
+                </div>
+            {{/if}}
+        </div>
+    </div>
+{{/if}}
+</div>
+
+<div class="productListingPage__wrapper">
+    {{> components/custom/page/product-listing-nav isSearch=true}}
+    
+    <section class="productListingPage__main">
+        {{#if product_results.faceted_search_enabled}}
+            <aside class="page-sidebar productListingPage__sidebar{{#if forms.search.section '!=' 'product'}} u-hiddenVisually{{/if}}" id="faceted-search-container">
+                {{> components/faceted-search/index product_results}}
+            </aside>
         {{/if}}
-
-        <div role="tabpanel" id="search-results-content" aria-labelledby="search-results-content-count" {{#if forms.search.section '!=' 'content'}}class="u-hidden"{{/if}}>
-            {{> components/search/content-listing}}
-        </div>
-
-        <div role="tabpanel" id="product-listing-container" aria-labelledby="search-results-product-count" {{#if forms.search.section '!=' 'product'}}class="u-hidden"{{/if}}>
-            {{> components/search/product-listing}}
-        </div>
-
-        {{{region name="search_below_content"}}}
-    </main>
-</section>
+        <main class="page-content productListingPage__products">
+    
+            <div role="tabpanel" id="search-results-content" aria-labelledby="search-results-content-count" {{#if forms.search.section '!=' 'content'}}class="u-hidden"{{/if}}>
+                {{> components/search/content-listing}}
+            </div>
+    
+            <div role="tabpanel" id="product-listing-container" aria-labelledby="search-results-product-count" {{#if forms.search.section '!=' 'product'}}class="u-hidden"{{/if}}>
+                {{> components/search/product-listing}}
+            </div>
+    
+            {{{region name="search_below_content"}}}
+        </main>
+    </section>
+</div>
 
 {{/partial}}
 {{> layout/base}}
