--- a/templates/pages/checkout.html
+++ b/templates/pages/checkout.html
@@ -15,16 +15,26 @@
 {{#partial "page"}}
 <header class="checkoutHeader optimizedCheckout-header">
     <div class="checkoutHeader-content">
-        <h1 class="is-srOnly">{{lang 'checkout.title'}}</h1>
-        <h2 class="checkoutHeader-heading">
-            <a class="checkoutHeader-link" href="{{urls.home}}">
-                {{#if checkout.header_image}}
-                    <img alt="{{settings.store_logo.title}}" class="checkoutHeader-logo" id="logoImage" src="{{ checkout.header_image }}"/>
-                {{ else }}
-                    <span class="header-logo-text">{{settings.store_logo.title}}</span>
-                {{/if}}
+        <div class="checkoutHeader__left">
+            <h1 class="is-srOnly">{{lang 'checkout.title'}}</h1>
+            <h2 class="checkoutHeader-heading">
+                <a class="checkoutHeader-link" href="{{urls.home}}">
+                    {{#if checkout.header_image}}
+                        <img alt="{{settings.store_logo.title}}" class="checkoutHeader-logo" id="logoImage" src="{{ checkout.header_image }}"/>
+                    {{ else }}
+                        <span class="header-logo-text">{{settings.store_logo.title}}</span>
+                    {{/if}}
+                </a>
+            </h2>
+        </div>
+
+        <div class="checkoutHeader__right">
+            <a href="/cart.php" class="cartLink">
+                <span>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 14" focusable="false" aria-hidden="true" class="a8x1wu10 _1fragem2i _1fragemqz _1fragemn2 _1fragemmx _1fragemq4"><path d="M2.675 10.037 3.072 4.2h7.856l.397 5.837A2.4 2.4 0 0 1 8.932 12.6H5.069a2.4 2.4 0 0 1-2.394-2.563"></path><path d="M4.9 3.5a2.1 2.1 0 1 1 4.2 0v1.4a2.1 2.1 0 0 1-4.2 0z"></path></svg>
+                </span>
             </a>
-        </h2>
+        </div>
     </div>
 </header>
 
